<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:orientation="vertical"
    android:paddingVertical="32dp"
    android:paddingHorizontal="65dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="270sp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_bg"
        android:inputType="textPassword"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="277sp"
        android:layout_height="38dp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/text_bg"
        android:inputType="textPassword"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        android:checked="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="Login"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Forgot Password"
        android:textColor="@color/black"
        android:textSize="10sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="24dp"
        android:text="OR"
        android:textColor="#808080" />


    <ImageButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/google"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:contentDescription="Sign in with Google" />

    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/signup"
        android:textColor="@color/charcoal" />

</LinearLayout>